@@ -7,6 +7,9 @@ jsoup changelog
  * Updated the Cleaner and whitelists to optionally preserve related links in elements, instead of converting them
    to absolute links.
 
+ * Fixed handling of null characters within comments.
+   <https://github.com/jhy/jsoup/issues/121>
+
 *** Release 1.6.1 [2011-Jul-02]
  * Fixed Java 1.5 compatibility.
    <https://github.com/jhy/jsoup/issues/103>
